--- a/examples/graph-db-demo/neptune-example.ipynb
+++ b/examples/graph-db-demo/neptune-example.ipynb
@@ -148,16 +148,9 @@
     "        \"provider\": \"aws_bedrock\",\n",
     "        \"config\": {\n",
     "            \"model\": bedrock_embedder_model,\n",
-    "        }\n",
+    "        },\n",
     "    },\n",
-    "    \"llm\": {\n",
-    "        \"provider\": \"aws_bedrock\",\n",
-    "        \"config\": {\n",
-    "            \"model\": bedrock_llm_model,\n",
-    "            \"temperature\": 0.1,\n",
-    "            \"max_tokens\": 2000\n",
-    "        }\n",
-    "    },\n",
+    "    \"llm\": {\"provider\": \"aws_bedrock\", \"config\": {\"model\": bedrock_llm_model, \"temperature\": 0.1, \"max_tokens\": 2000}},\n",
     "    \"vector_store\": {\n",
     "        \"provider\": \"opensearch\",\n",
     "        \"config\": {\n",
